fix: #rootにoverflow-x: hiddenを追加することにより、homeの地図の影が消えるバグを修正

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,6 +20,7 @@
   margin-top: 0;
   padding-top: 0;
   text-align: center;
+  overflow-x: hidden;
 }
 
 a {
@@ -208,7 +209,6 @@ button:hover {
   height: 800px;
   margin-top: 20px;
   position: relative;
-  overflow: hidden;
 }
 
 .home-map {
